test/org/midica/testfiles/failing/chord-without-notes.midica
INCLUDE inc/instruments.midica
CHORD test